(Format: Year/Month/Day)
Changes for 0.9.15:
*06/02/20:
   * Moved resource helper class Layer out from 
     class Fluxbox. Reduced some dependencies.
     (Henrik)
     
*06/02/19:
   * Added new resize mode: Center
     This mode will move all corners at the same time with 
     equal distance.
     Set resource:  session.screen0.resizeMode: Center
     (Henrik)
     Window.hh Window.cc Screen.hh ScreenResources.cc 
   * Moved Window placement code from Workspace to different 
     PlacementStrategy classes. The main class is ScreenPlacement which
     selects the right placement class to use.     (Henrik)
     CascadePlacement.{hh,cc} UnderMousePlacement.{hh,cc}
     ColSmartPlacement.{hh,cc} RowSmartPlacement.{hh,cc}
     ScreenPlacement.{cc,hh} ScreenResources.cc Workspace.{hh,cc}
     PlacementStrategy.hh Screen.{hh,cc}
     Makefile.am 
*06/02/18:
   * Moved focus handling code to class FocusControl (Henrik)
     fluxbox.hh/cc, Screen.hh/cc, Window.cc, Workspace.cc....
*06/02/15:
   * updated copyright info (Mathias)
*06/02/14:
   * Fix nls compilation (Mathias)
     RootTheme.cc fbsetbg
*06/02/12:
   * Fixed #bug #1417688, remember apps keeps 
     incrementing vertical dimension  (Henrik)
     Remember.cc
   * Fixed root pixmap problem. 
     Using fbsetroot to set background.  (Henrik)
     RootTheme.cc, FbPixmap.hh/cc, FbCommands.hh/cc
*06/02/01:
   * fbsetroot copyright/help fixes (Thanks php-coder)
     fbsetroot.cc, nls/*
*06/01/29:
   * Changed bsetroot to fbsetroot in documentation (Thanks OpenBSD)
     fbsetbg.1 fluxstyle.1.in fluxbox.1.in
*06/01/25:
   * Added norwegian bokmal, nb_NO (Thanks Alexander Sornes)
     nls/nb_NO, util/fluxbox-generate_menu.in
*06/01/23:
   * minor fix for fbsetbg (thanx Mark Tiefenbruck)
*06/01/16:
   * minor changes to fix some warnings (Thanks php-coder)
     Screen.cc Window.cc MenuCreator.cc MenuTheme.hh
*06/01/07:
   * minor addons to fbgm, close Gentoo #74523 and #110677 (Mathias)
*06/01/03: