@@ -1,5 +1,10 @@
 (Format: Year/Month/Day)
 Changes for 0.9.15:
+*06/02/27:
+   * minor cosmetic issues (thanx php-coder)
+     Slit.cc WindowCmd.cc PlacementStrategy.hh stringstream.hh
+     Select2nd.hh Parser.cc LayerMenu.cc Toolbar.cc 
+     WindowCmd.hh
 *06/02/20:
    * Moved resource helper class Layer out from 
      class Fluxbox. Reduced some dependencies.
